--- a/src/styles/block_list.sass
+++ b/src/styles/block_list.sass
@@ -1,2 +1,34 @@
 #block-list-container
   display: flex
+  justify-content: space-between
+  flex-wrap: wrap
+
+
+.block-list-item
+  border: 2px solid black
+  border-radius: 15px
+  display: grid
+  grid-template-columns: auto auto
+  grid-template-rows: 10% 10% 10% 10% auto
+  margin: 0 10px
+  width: 400px
+  min-height: 70vh
+  padding: 10px
+
+  // &:last-of-type
+  //   margin-right: 0
+
+  /* transations row */
+  div:last-of-type
+    align-content: flex-start
+    display: flex
+    flex-wrap: wrap
+    grid-column: span 2
+
+    /* transaction icon link */
+    .transaction-link-icon
+      background-color: black
+      border-radius: 15px
+      height: 30px
+      margin: 5px
+      width: 30px
