--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -2,6 +2,10 @@ html body
   margin: 0
   padding: 0
 
+body
+  min-height: 100vh
+  background-color: #fafafa
+
 #app
   padding: 30px 100px
   font-size: 1.5em
