--- a/src/styles/shared.sass
+++ b/src/styles/shared.sass
@@ -1,6 +1,10 @@
 %information-pane
   background-color: #ffffff
   border: 2px solid black
-  box-shadow: 2px 2px 2px #cccccc
+  box-shadow: 4px 4px 3px #cccccc
   border-radius: 15px
   padding: 10px
+
+%grid-stripes
+  div:nth-child(4n), div:nth-child(4n - 1)
+      background-color: #eeeeee
