--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,3 +1,5 @@
+@import shared
+
 html body
   margin: 0
   padding: 0
@@ -9,3 +11,20 @@ body
 #app
   padding: 30px 100px
   font-size: 1.5em
+  min-width: 300px
+
+  @media #{$medium}
+    font-size: 1.2em
+    padding: 30px 20px
+
+  @media #{$small}
+    padding: 10px 10px
+
+  @media #{$tiny}
+    font-size: 0.8em
+
+  main
+    h1
+      font-size: 2.5em
+      text-align: center
+      margin: 0 0 40px 0
