--- a/src/styles/shared.sass
+++ b/src/styles/shared.sass
@@ -1,3 +1,7 @@
+$tiny: "(max-width: 550px)"
+$small: "(max-width: 700px)"
+$medium: "(max-width: 1450px)"
+
 %information-pane
   background-color: #ffffff
   border: 2px solid black
