--- a/src/styles/shared.sass
+++ b/src/styles/shared.sass
@@ -1,10 +1,10 @@
 $tiny: "(max-width: 550px)"
 $small: "(max-width: 700px)"
-$medium: "(max-width: 1450px)"
+$medium: "(max-width: 1650px)"
 
 %information-pane
   background-color: #ffffff
-  border: 2px solid black
+  border: 2px solid #888888
   box-shadow: 4px 4px 3px #cccccc
   border-radius: 15px
   padding: 10px
