--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -22,7 +22,7 @@ header
       margin-right: 10px
       &:hover
         *
-          color: #AAAAAA
+          color: $grey
 
     display: flex
     text-decoration: none
