--- a/src/styles/shared.sass
+++ b/src/styles/shared.sass
@@ -1,6 +1,15 @@
+// screen sizes
 $tiny: "(max-width: 550px)"
 $small: "(max-width: 700px)"
 $medium: "(max-width: 1650px)"
+
+// colors
+$background: #fafafa
+$red: #a30101
+$green: #1d7700
+$yellow: #d3d013
+$grey: #aaaaaa
+$purple: #3e2399
 
 %information-pane
   background-color: #ffffff
