fix address checksum bug

--- a/src/styles/shared.sass
+++ b/src/styles/shared.sass
@@ -7,6 +7,7 @@ $medium: "(max-width: 1650px)"
 $background: #fafafa
 $red: #a30101
 $green: #1d7700
+$light-green: #92DB7A
 $yellow: #d3d013
 $grey: #aaaaaa
 $purple: #3e2399
