--- a/src/styles/block_list.sass
+++ b/src/styles/block_list.sass
@@ -52,7 +52,7 @@
 
     /* transaction icon link */
     .transaction-link-icon
-      background-color: $purple
+      background-color: $light-green
       border-radius: 7px
       height: 14px
       width: 14px
