--- a/src/styles/app.sass
+++ b/src/styles/app.sass
@@ -1,3 +1,4 @@
+@import url("https://fonts.googleapis.com/css?family=Montserrat|Source+Code+Pro")
 @import shared
 
 html body
@@ -5,8 +6,12 @@ html body
   padding: 0
 
 body
-  min-height: 100vh
   background-color: $background
+  min-height: 100vh
+  font-family: "Montserrat", sans-serif
+
+.mono
+  font-family: "Source Code Pro", monospace
 
 #app
   padding: 30px 100px
@@ -25,6 +30,12 @@ body
 
   main
     h1
-      font-size: 2.5em
+      font-size: 2.2em
       text-align: center
       margin: 0 0 40px 0
+      color: $black
+
+  a
+    color: $light-blue
+    &:visited
+      color: $purple
