--- a/src/styles/block_list.sass
+++ b/src/styles/block_list.sass
@@ -8,16 +8,16 @@
   display: grid
   grid-template-columns: auto auto
   grid-template-rows: 15% 10% 10% 10% auto
-  margin-bottom: 15px
-  height: 500px
-  width: 300px
+  margin-bottom: 40px
+  height: 400px
+  width: 350px
 
   @media #{$medium}
     height: 400px
     width: 300px
 
   @media #{$small}
-    height: 300px
+    height: 400px
     width: 400px
 
   @media #{$tiny}
@@ -41,10 +41,10 @@
 
     a
       display: block
-      margin: 3px
+      padding: 3px
 
       &:hover
-        margin: 0
+        padding: 0
         .transaction-link-icon
           border-radius: 10px
           height: 20px
@@ -52,7 +52,12 @@
 
     /* transaction icon link */
     .transaction-link-icon
-      background-color: $light-green
+      background-color: $green
       border-radius: 7px
       height: 14px
       width: 14px
+
+      @media #{$small}
+        border-radius: 5px
+        height: 10px
+        width: 10px
