--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -17,7 +17,7 @@ header
 
   #nav-button-container
     > *
-      color: black
+      color: $black !important
       cursor: pointer
       margin-right: 10px
       &:hover
