--- a/src/styles/shared.sass
+++ b/src/styles/shared.sass
@@ -4,11 +4,12 @@ $small: "(max-width: 700px)"
 $medium: "(max-width: 1650px)"
 
 // colors
-$background: #fafafa
+$background: #fcfeff
+$black: #353535
 $red: #a30101
-$green: #1d7700
-$light-green: #92DB7A
-$yellow: #d3d013
+$green: #92DB7A
+$light-blue: #5BC3EB
+$yellow: #FED766
 $grey: #aaaaaa
 $purple: #3e2399
 
