--- a/src/styles/header.sass
+++ b/src/styles/header.sass
@@ -3,6 +3,7 @@
 header
   display: flex
   flex-wrap: wrap
+  align-items: center
 
   /* search bar & metrics */
   & > div
@@ -16,16 +17,24 @@ header
       margin: 0 10px 15px 10px
 
   #nav-button-container
-    > *
+    display: flex
+    text-decoration: none
+    & > *
       color: $black !important
       cursor: pointer
-      margin-right: 10px
+      height: 40px
+      margin-right: 20px
+      display: flex
+      align-items: flex-end
+      font-size: 1.5em
       &:hover
         *
           color: $grey
+      & > div
+        display: flex
+        align-items: flex-end
 
-    display: flex
-    text-decoration: none
+
 
   /* metrics */
   & > div:last-of-type
